# adventofcode

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile  mise.toml  rustfmt.toml
csharp/: adventofcode.sln  justfile
csharp/AdventOfCode.Tests/: AdventOfCode.Tests.csproj
go/: go.mod  justfile  rsrc
go/template/: _part_01.go  _part_01_test.go  _part_02.go  _part_02_test.go
go/utils/: adventofcode.go  io.go  path.go  testing.go
rsrc/2020/: input_13.txt
rust/: Cargo.toml  justfile
rust/src/: lib.rs  main.rs  utils.rs
rust/src/year_2020/: day_01.rs  day_07.rs  day_08.rs  day_10.rs  day_13.rs  day_15.rs  day_16.rs  day_17.rs
rust/src/year_2021/: day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_09.rs  day_11.rs  day_13.rs  day_14.rs
rust/src/year_2022/: day_01.rs  day_03.rs  day_05.rs
rust/src/year_2023/: day_01.rs  day_02.rs  day_03.rs  day_05.rs  day_07.rs  day_11.rs  day_15.rs  day_16.rs
rust/src/year_2024/: day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_18.rs  day_19.rs  mod.rs
rust/template/: lib.rs
src/: lib.rs  main.rs  utils.rs
src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_06.rs
src/year_2019/: day_01.rs
src/year_2020/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_24.rs  day_25.rs
template/: lib.rs
typescript/: deno.json  justfile
zig/: build.zig  build.zig.zon  justfile
(+117 files in other folders)
