[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Nicholas Omer Chiasson <nicholasomerchiasson@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = "5.2.0"
num = "0.3.1"
regex = "1.4.2"
