[package]
name = "adventofcode"
description = "Nicholas Omer Chiasson's Advent of Code solutions."
version = "0.1.0"
authors = ["Nicholas Omer Chiasson <nicholasomerchiasson@gmail.com>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/nicholaschiasson/adventofcode"
keywords = ["adventofcode", "aoc"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexical = "6.0.1"
num = "0.3.1"
regex = "1.4.2"
